# auction

./: .gitignore  Dockerfile  Makefile  Procfile  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
auction/: admin.py  models.py  tasks.py  urls.py
backend/: Dockerfile  Makefile  asgi.py  celery.py  dates.pkl  docker-compose.yml  production.py  production_settings.py  pyproject.toml  settings.py  settings_new.py  urls.py  wsgi.py
backend/auction/: admin.py  consumers.py  enums.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/auction/migrations/: 0001_initial.py  0002_auto_20211018_1016.py  0003_auto_20211018_1040.py  0007_alter_auction_end_price.py
backend/auction/tests/: test_serializers.py
backend/backend/: celery.py  settings.py  urls.py
backend/core/: views.py
backend/item/: models.py  serializers.py  urls.py  views.py
backend/item/migrations/: 0001_initial.py
backend/lot/: serializers.py  urls.py  views.py
backend/lot/migrations/: 0001_initial.py  0002_offer.py
backend/offer/: models.py  serializers.py  views.py
backend/offer/migrations/: 0001_initial.py  0003_auto_20211028_1121.py
backend/offer/tests/: test_serializers.py
backend/settings/: base.py  development.py  production.py
backend/users/: serializers.py  urls.py  views.py
core/: views.py
frontend/: .gitignore  package-lock.json  package.json
item/: models.py  serializers.py  views.py
lot/: admin.py  models.py  serializers.py
offer/: models.py  urls.py  views.py
terraform/: .terraform.lock.hcl  main.tf  (+2 more)
(+35 files in other folders)
